# LLM_Data_Generation

./: .gitignore  README.md  pyproject.toml
.github/workflows/: cpu-tests.yml
configs/: config.yaml  config_answers.yaml
data_generation/: __init__.py
data_generation/conf/: config.py
data_generation/prompts/system_prompts/: gen_qa.jinja2
data_generation/prompts/user_prompts/: gen_answers_de.jinja2  gen_answers_en.jinja2  gen_questions_de.jinja2  gen_questions_en.jinja2
data_generation/scripts/: generate_text.py
data_generation/src/: cloud_llm_generator.py  data_models.py  datasets.py  llm_generator.py  llm_generator_factory.py  llm_response_processor.py  local_llm_generator.py
data_generation/utils/: helpers.py
data_generation/wrappers/: llm_generator_wrappers.py
tests/: conftest.py
tests/data/: sample_config.yaml  sample_config_answers.yaml  sample_config_questions.yaml  sample_context.jsonl  sample_discourse_acts.jsonl
tests/e2e/: test_generate_answers.py  test_generate_questions.py
tests/integration/: test_dataset.py
tests/unit/: test_config.py  test_llm_response_processor.py
