[project]
name = "data_generation"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "jinja2>=3.1.6,<3.2",
    "torch~=2.8.0",
    "transformers~=4.56.2",
    "pydantic~=2.12.4",
]

[project.optional-dependencies]
gpu = [
    "vllm~=0.10.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["data_generation*"]
